tests/paczka1/small_fuzzy/30908693.err
Error in line 2: A690 A811 67,31
Error in line 1: oK8n S458 54,0
Error in line 3: oK8n A690 81,7
Error in line 10: oK8n A655 99,7
